PROJECT( SHP2GPX )

CMAKE_MINIMUM_REQUIRED( VERSION 3.16.0 )

INCLUDE_DIRECTORIES( "." ".." )

SET( SOURCES shp2gpx.cpp )

IF( UNIX )

  INCLUDE_DIRECTORIES( "/usr/include" "/usr/local/include" )
  SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++14" )

ENDIF( UNIX )

FIND_LIBRARY( SHAPELIB shp REQUIRED )

ADD_EXECUTABLE( shp2gpx ${SOURCES} )

TARGET_LINK_LIBRARIES( shp2gpx ${SHAPELIB} )

INSTALL( TARGETS shp2gpx DESTINATION bin )
